@@ -1,5 +1,4 @@
-EBUILD aufs-utils-0.1_pre20071210.ebuild 706 RMD160 dcf4a50f27db6b2fc03ac1553e4fe3ffcf885080 SHA1 8e5d16b82597d79e8015443cc0a1be3e21a81291 SHA256 b75e4f46df64c14f092e8461f5869106eb04715b732691c46e28014dbf6e15bd
 EBUILD aufs-utils-0.1_pre20080121.ebuild 745 RMD160 114e3a068ecd4826ca10ec9ca483f2c2a24c46f0 SHA1 bc6b2eb7ab482aea4d1ad647db61c508c6b23a0a SHA256 cef6ec6739eeb8807540bc0dc6dd98a21225bed3ff1f50d36324eb94fb969ac4
 EBUILD aufs-utils-9999.ebuild 598 RMD160 3e8f04ec2b80e8e09799cd3357f52aa94973d3d4 SHA1 6edffda93bede776189eb5cd846545a8dc1e396b SHA256 584c9426c47069cba8b6db07d1a20207956d5859ff643f79a5438dc1079c3933
-MISC ChangeLog 1626 RMD160 b18c5603449daf1bf52f40a804141aebfa0acc2c SHA1 6845f196b155117c7d4182a761ca6f36b01f37e7 SHA256 dd75edc76b7ca2c1e4f23dd272e2575daeb73e04872cb4f9913770342b2778e9
+MISC ChangeLog 1743 RMD160 cc12db51492e0fb5a3db39089ed00ba87dbcc1d6 SHA1 c8e6f5a9142c2740dc502ce7da1de08829ac6efa SHA256 b8108a3e8152e0f86d25a07d125a235f61fc57e5644150dc856f3b8b1b20ea6c
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
